# xpmile

./: .dockerignore  README.md  docker-compose.yml  rule.md
backend/: CMakeLists.txt  Doxyfile
backend/inc/: emailservice.hpp  http_parser.h  webservice.h  whatsapp_service.hpp
backend/mongodbc/: CMakeLists.txt  README.md
backend/mongodbc/inc/: mongodbc.h
backend/mongodbc/src/: mongodbc.cc
backend/src/: emailservice.cc  emailservice_fsm.cc  http_parser.cc  oauth2service.cc  webservice.cc  webservice_main.cc  whatsapp_service.cc
backend/test/: CMakeLists.txt  emailservice_test.cc  emailservice_test.hpp  httpparser_test.cc  httpparser_test.hpp  main.cc  webservice_test.cc  webservice_test.hpp
docker/: Dockerfile  mongo-init.js
ui/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
ui/src/: index.html  styles.scss
ui/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
ui/src/app/accounting/anav-bar/: anav-bar.component.html  anav-bar.component.spec.ts  anav-bar.component.ts
ui/src/app/accounting/create-account/: create-account.component.html  create-account.component.scss  create-account.component.ts
ui/src/app/accounting/list-account/: list-account.component.html  list-account.component.ts
ui/src/app/accounting/update-account/: update-account.component.html  update-account.component.scss  update-account.component.ts
ui/src/app/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
ui/src/app/inventory-report/: inventory-report.component.html  inventory-report.component.ts
ui/src/app/inventory/create-manifest/: create-manifest.component.html  create-manifest.component.spec.ts  create-manifest.component.ts
ui/src/app/inventory/find-inventory/: find-inventory.component.html  find-inventory.component.spec.ts  find-inventory.component.ts
ui/src/app/inventory/in-inventory/: in-inventory.component.html  in-inventory.component.spec.ts  in-inventory.component.ts
ui/src/app/inventory/inav-bar/: inav-bar.component.html  inav-bar.component.spec.ts  inav-bar.component.ts
ui/src/app/inventory/out-inventory/: out-inventory.component.html  out-inventory.component.spec.ts  out-inventory.component.ts
ui/src/app/inventory/update-inventory/: update-inventory.component.html  update-inventory.component.ts
ui/src/app/login/: login.component.html  login.component.scss  login.component.ts
ui/src/app/login/password-reset/: password-reset.component.html  password-reset.component.ts
ui/src/app/main/: main.component.html  main.component.scss  main.component.ts
ui/src/app/reporting/detailed-report/: detailed-report.component.html  detailed-report.component.spec.ts  detailed-report.component.ts
ui/src/app/reporting/rnav-bar/: rnav-bar.component.html  rnav-bar.component.spec.ts  rnav-bar.component.ts
ui/src/app/shipping/altref-bulk/: altref-bulk.component.html  altref-bulk.component.spec.ts  altref-bulk.component.ts
ui/src/app/shipping/api-integration/: api-integration.component.html  api-integration.component.ts
ui/src/app/shipping/bulk/: bulk.component.html  bulk.component.scss  bulk.component.ts
ui/src/app/shipping/collect-shipment/: collect-shipment.component.html  collect-shipment.component.scss  collect-shipment.component.spec.ts  collect-shipment.component.ts
ui/src/app/shipping/create-drs/: create-drs.component.html  create-drs.component.spec.ts  create-drs.component.ts
ui/src/app/shipping/list/: list.component.html  list.component.scss  list.component.ts
ui/src/app/shipping/modify/: modify.component.html  modify.component.scss  modify.component.ts
ui/src/app/shipping/single/: single.component.html  single.component.scss  single.component.ts
ui/src/app/shipping/submenu/: submenu.component.html  submenu.component.ts
ui/src/app/tracking/email/: email.component.html  email.component.scss  email.component.ts
ui/src/app/tracking/multiple-shipment/: multiple-shipment.component.html  multiple-shipment.component.spec.ts  multiple-shipment.component.ts
ui/src/app/tracking/single-shipment-diaglog/: single-shipment-diaglog.component.html  single-shipment-diaglog.component.spec.ts  single-shipment-diaglog.component.ts
ui/src/common/: app-globals.ts  excelsvc.service.spec.ts  excelsvc.service.ts  httpsvc.service.spec.ts  httpsvc.service.ts  pubsubsvc.service.spec.ts  pubsubsvc.service.ts  types.d.ts
ui/src/environments/: environment.prod.ts
(+9 files in other folders)
